Login Con modelo personalisado

--- a/sgim/templates/includes/nav_bar.html
+++ b/sgim/templates/includes/nav_bar.html
@@ -15,11 +15,9 @@
                         Inventario<b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="{% url 'tarea_add' %}">Dispositivos</a></li>
-                        <li><a href="{% url 'actualizar_clave' %}">Servicios</a></li>
-                        <li class="divider"></li>
-                        <li><a href="/admin">Componentes</a></li>
-                        <li><a href="{% url 'logout' %}">Boletas</a></li>
+                        <li><a href="{% url 'dispositivo_add' %}">Dispositivos</a></li>
+                        <li><a href="{% url 'servicios_list' %}">Servicios</a></li>
+                        <li><a href="{% url 'componentes_list' %}">Componentes</a></li>                        
                     </ul>
                 </li> 
                 <li class="dropdown" >
