Login Con modelo personalisado

--- a/sgim/templates/includes/nav_bar.html
+++ b/sgim/templates/includes/nav_bar.html
@@ -16,7 +16,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href="{% url 'dispositivo_add' %}">Dispositivos</a></li>
-                        <li><a href="{% url 'servicios_list' %}">Servicios</a></li>
+                        <li><a href="{% url 'servicio_add' %}">Servicios</a></li>
                         <li><a href="{% url 'componentes_list' %}">Componentes</a></li>                        
                     </ul>
                 </li> 
