--- a/sgim/templates/material.html
+++ b/sgim/templates/material.html
@@ -17,6 +17,11 @@
 
     <link rel="stylesheet" href="{{BOWER_URL}}snackbarjs/src/snackbar.css">
     <script src="{{BOWER_URL}}snackbarjs/dist/snackbar.min.js"></script>
+  
+
+    <link rel="stylesheet" href="{{BOWER_URL}}bootstrap-material-design/dist/css/roboto.min.css"  media="screen,projection"/>
+    <link rel="stylesheet" href="{{BOWER_URL}}bootstrap-material-design/dist/css/material.min.css"  media="screen,projection"/>
+
 
 
     {% block include_statics %}
