--- a/sgim/templates/base.html
+++ b/sgim/templates/base.html
@@ -23,9 +23,7 @@
     <link rel="stylesheet" href="{{BOWER_URL}}bootstrap-material-design/dist/css/material.min.css"  media="screen,projection"/>
     <link rel="stylesheet" href="{{BOWER_URL}}bootstrap-material-design/dist/css/ripples.min.css"  media="screen,projection"/>
 
- <script src="{{BOWER_URL}}webcomponentsjs/webcomponents.js">  </script>
 
-    <link rel="import" href="{{BOWER_URL}}paper-progress/paper-progress.html">
 
      <!--Import materialize.css
       <link type="text/css" rel="stylesheet" href="{{BOWER_URL}}materialize/dist/css/materialize.css"  media="screen,projection"/>
@@ -48,8 +46,10 @@
     {% endblock contenido %}
 
     
+ {% comment %}
+     <script type="text/javascript" src="{{BOWER_URL}}materialize/dist/js/materialize.min.js"></script>  
+ {% endcomment %}
  
-   <script type="text/javascript" src="{{BOWER_URL}}materialize/dist/js/materialize.min.js"></script>
     <script src="{{BOWER_URL}}bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="{{BOWER_URL}}bootstrap-material-design/dist/js/ripples.min.js"></script>
     <script src="{{BOWER_URL}}bootstrap-material-design/dist/js/material.min.js"></script>
