Trabajando en formularios de ingrso

--- a/sgim/templates/includes/nav_bar.html
+++ b/sgim/templates/includes/nav_bar.html
@@ -26,9 +26,9 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href="{% url 'tareas_list' %}">Tareas</a></li>
-                        <li><a href="{% url 'actualizar_clave' %}">Rutinas</a></li>
+                        <li><a href="{% url 'rutinas_list' %}">Rutinas</a></li>
+                        <li><a href="{% url 'planes_list' %}">Programacion</a></li>
                         <li class="divider"></li>
-                        <li><a href="/admin">Programacion</a></li>
                         <li><a href="{% url 'logout' %}">Boletas</a></li>
                     </ul>
                 </li> 
