--- a/sgim/templates/base.html
+++ b/sgim/templates/base.html
@@ -5,10 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{% block titulo %}   {% endblock titulo %} </title>
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+
+    <link rel="shortcut icon" href="{{STATIC_URL}}images/favicon.ico" type="image/x-icon">
  
     <script src="{{BOWER_URL}}jquery/dist/jquery.min.js"></script>
     <script src="{{BOWER_URL}}jquery-cookie/jquery.cookie.js"></script>
     <script src="{{STATIC_URL}}js/dist/1.js"></script>
+    <link href="{{STATIC_URL}}css/ionicons.min.css" rel="stylesheet" type="text/css" />
 
     <script src="{{BOWER_URL}}semantic-ui/dist/semantic.min.js"></script>
     <link rel="stylesheet" href="{{BOWER_URL}}semantic-ui/dist/semantic.css">
